--- a/generators/app/templates/src/views/home/home.html
+++ b/generators/app/templates/src/views/home/home.html
@@ -2,7 +2,8 @@
 <html>
   <title>test</title>
   <body>
-    <div>ha</div>
-    <i class="iconfont icon-touzi"></i>
+    <div class="home-content">
+      hello ,宝宝
+    </div>
   </body>
 </html>
