--- a/generators/app/templates/src/views/home/home.html
+++ b/generators/app/templates/src/views/home/home.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <title>test</title>
+  <%- include('../../src/components/header/header.html'); %>
   <body>
     <div class="home-content">
       hello ,宝宝
